syntax = "proto3";

package contacts;

service ContactService {
  rpc getContact(ContactRequest) returns (stream ContactResponse) {}
}

message ContactRequest {
}

message ContactResponse {
  string contactName = 1;
  uint64 phoneNumber = 2;
  string section = 3;
}
